# llms-from-scratch

./: pyproject.toml
stage1/: text_data.ipynb
stage2/: multi-head-causal-attention.ipynb  self-attention.ipynb  simple-attention.ipynb
stage3/: llm-arch.ipynb
stage4/: pretrain.ipynb
